Fix layout issue for header

--- a/src/routes/Home/HomePage.less
+++ b/src/routes/Home/HomePage.less
@@ -13,7 +13,6 @@
 
 .section {
   padding: 15px;
-  margin-top: 25px;
   margin-bottom: 25px;
 }
 
